# dcgan_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mnist.py
headers/: dcgan.h  train.h
src/: dcgan.cpp  main.cpp  train.cpp
